--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "1.3.0",
-    "react-native-reanimated": "1.2.0",
+    "react-native-gesture-handler": "1.5.0",
+    "react-native-reanimated": "1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16",
+    "react-navigation-stack": "1.10.3",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
