--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "~36.0.0",
     "expo-facebook": "^8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.8.0",
     "react": "~16.9.0",
@@ -21,6 +22,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
