--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
     "react-navigation-stack": "1.10.3",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
